--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chayon Das</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="icon" href="/clogo.png">
 </head>
 
 <body>
@@ -81,7 +82,7 @@
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
-                    <div class="details-container">
+                    <div class="details-container">   
                         <img src="./assets/experience.png" alt="experience icon" class="icon">
                         <h3>Experience</h3>
                         <p>3 Months <br>Full-Stack Development</p>
@@ -135,7 +136,6 @@
                                 <p>Experienced</p>
                             </div>
                         </article>
-
                         <article>
 
                             <img src="./assets/checkmark.png" alt="Experience-icon" class="icon">
